packages/frontend/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;

  --header-height: 3rem;
  --nav-width: 68px;

  --z-fixed: 100;

  /*===== Colors =====*/
  --first-color: #3b82f6;
  --first-color-light: #afa5d9;
  --white-color: #f7f6fb;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

main {
  position: relative;
  @apply mx-auto;
  /* left: calc(var(--nav-width) * -1); */
}

/*===== BASE =====*/
*,
::before,
::after {
  box-sizing: border-box;
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
}

.content-main {
  position: relative;
  margin-top: var(--header-height);
  /* padding: 0 1rem; */
  transition: 0.5s;
}

a {
  text-decoration: none;
}

/*===== HEADER =====*/
.header {
  width: 100%;
  height: var(--header-height);
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: var(--white-color);
  z-index: var(--z-fixed);
  transition: 0.5s;
}

.header__toggle {
  color: var(--first-color);
  font-size: 1.5rem;
  cursor: pointer;
}

.header__img {
  width: 35px;
  height: 35px;
  display: flex;
  justify-content: center;
  border-radius: 50%;
  overflow: hidden;
}

.header__img img {
  width: 40px;
}

/*===== NAV =====*/
.l-navbar {
  position: fixed;
  top: 0;
  left: calc(var(--nav-width) * -1);
  width: var(--nav-width);
  height: 100vh;
  background-color: var(--first-color);
  padding: 0.5rem 1rem 0 0;
  transition: 0.5s;
  z-index: var(--z-fixed);
}

.nav {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow: hidden;
}

.nav__logo,
.nav__link {
  display: grid;
  grid-template-columns: max-content max-content;
  align-items: center;
  column-gap: 1rem;
  padding: 0.5rem 0 0.5rem 1.5rem;
}

.nav__logo {
  margin-bottom: 2rem;
}

.nav__logo-icon {
  font-size: 1.25rem;
  color: var(--white-color) !important;
}

.nav__logo-name {
  color: var(--white-color);
  font-weight: 700;
}

.nav__link {
  position: relative;
  color: var(--first-color-light);
  margin-bottom: 1.5rem;
  transition: 0.3s;
}

.nav__link:hover {
  color: var(--white-color);
}

.nav__icon {
  font-size: 1.25rem;
  color: var(--white-color) !important;
}

/*Show navbar movil*/
.show {
  left: 0;
}

/*Add padding body movil*/
.body-pd {
  padding-left: calc(var(--nav-width));
}

/*Active links*/
.active {
  color: var(--white-color);
}

.active::before {
  content: "";
  position: absolute;
  left: 0;
  width: 2px;
  height: 32px;
  background-color: var(--white-color);
}

/* ===== MEDIA QUERIES=====*/
@media screen and (min-width: 768px) {
  .content-main {
    margin-top: calc(var(--header-height) + 1rem);
    /* margin-left: calc(var(--header-height) + 1rem); */
    padding-left: var(--nav-width);
  }

  .header {
    height: calc(var(--header-height) + 1rem);
    padding-left: var(--nav-width);
  }

  .header__img {
    width: 40px;
    height: 40px;
  }

  .header__img img {
    width: 45px;
  }

  .l-navbar {
    left: 0;
    padding: 1rem 1rem 0 0;
  }

  /*Show navbar desktop*/
  .show {
    width: calc(var(--nav-width) + 156px) !important ;
  }

  /*Add padding body desktop*/
  .body-pd {
    padding-left: calc(var(--nav-width) + 156px);
  }
}

